Fixing spacing around logo on about page.

--- a/themes/lovesea/sass/_about.scss
+++ b/themes/lovesea/sass/_about.scss
@@ -415,7 +415,7 @@
   width: 42px;
   height: 70px;
   display: block;
-  margin: 0 auto;
+  margin: 0 auto 1rem;
 }
 .contact-us-button-wrapper {
   display: flex;
